# pythonning

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
chess_rating/infrastructure/Database/: contracts.py  dataBaseClient.py  profile.py
chess_rating/infrastructure/api/: User.py  client.py  fapi.py
chess_rating/infrastructure/transformer/: transform.py
requirements/: app.in  app.txt
tests/infrastructure/Database/: test_db.py  test_int.py
tests/infrastructure/api/: test_client.py  test_int.py
tests/infrastructure/transformer/: test_transform.py
